# OpenWL_Avatar

./: .gitignore  README.md  requirements.txt
assets/: data.jsonl  storyboard.json
models/: __init__.py
models/gen_3d/: __init__.py  puppeteer.py  trellis.py
models/gen_3d/o-voxel/: README.md  pyproject.toml  setup.py
models/gen_3d/o-voxel/examples/: mesh2ovox.py  ovox2glb.py  ovox2mesh.py  render_ovox.py  utils.py
models/gen_3d/o-voxel/o_voxel/: __init__.py  postprocess.py  rasterize.py  serialize.py
models/gen_3d/o-voxel/o_voxel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/gen_3d/o-voxel/o_voxel/convert/: __init__.py  flexible_dual_grid.py  volumetic_attr.py
models/gen_3d/o-voxel/o_voxel/io/: __init__.py  npz.py  ply.py  vxz.py
models/gen_3d/o-voxel/src/: ext.cpp
models/gen_3d/o-voxel/src/convert/: api.h  flexible_dual_grid.cpp  volumetic_attr.cpp
models/gen_3d/o-voxel/src/hash/: api.h  hash.cu  hash.cuh
models/gen_3d/o-voxel/src/io/: api.h  filter_neighbor.cpp  filter_parent.cpp  lut.h  svo.cpp
models/gen_3d/o-voxel/src/rasterize/: api.h  auxiliary.h  config.h  rasterize.cu
models/gen_3d/o-voxel/src/serialize/: api.cu  api.h  hilbert.cu  hilbert.h  z_order.cu  z_order.h
models/gen_image/: __init__.py  qwen_edit.py
models/gen_video/: __init__.py  (+1 more)
operators/: readme.md
serving/: README.md  __init__.py  ue_client.py
test/: test_3D_avatar_gen.py  test_3D_avater.py  test_game_cg_gen.py  test_retarget.py  test_rigging.py  test_tpose_gen.py  test_ue_serving.py  test_viewer_avatar_control.py
ue_vfx/: README.md
(+165 files in other folders)
